# blck_fx-EQ

./: .gitignore  CMakeLists.txt  create_folders.py  sort_code.py  tech doc_2.txt  tecnical document.txt
src/apo/: CMakeLists.txt
src/apo/include/: stdafx.h
src/apo/src/: main.cpp
src/common/: CMakeLists.txt  version.cpp
src/common/include/: version.h
src/common/src/: version.cpp
src/gui/: CMakeLists.txt
src/gui/src/: main.cpp
